# crux-starter

./: Cargo.toml  README.md
Android/app/: build.gradle
Android/app/src/main/java/com/example/simple_counter/: MainActivity.kt
Android/app/src/main/java/com/example/simple_counter/ui/theme/: Theme.kt
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
Android/shared/: build.gradle
shared/: Cargo.toml  build.rs  uniffi.toml
shared/src/: app.rs  lib.rs
